[metadata]
name = saddle
author = Benjamin Toll
author-email = benjam72@yahoo.com
version = 0.1
description = Saddle up, for tonight we ride!
url = http://github.com/btoll/saddle
license = GPLv3+

[options]
packages = saddle
install_requires =
    pyyaml
entry_points =
    [console_scripts]
    saddle = saddle:main
    [mule.plugin]
    saddle = saddle
